fix: fix variable name in mixin `no-gap` of button-group

--- a/scss/components/_button-group.scss
+++ b/scss/components/_button-group.scss
@@ -83,7 +83,7 @@ $buttongroup-radius-on-each: true !default;
   #{$selector} {
     margin-#{$global-right}: -1px;
 
-    + #{$child-selector} {
+    + #{$selector} {
       border-#{$global-left}-color: transparent;
     }
   }
